--- a/main.css
+++ b/main.css
@@ -10,12 +10,14 @@
 /*=======================
   Styles
 =======================*/
+body {
+  background: linear-gradient(-240deg, #F45C67 1%, #F5845E 33%, #F6925B 50%, #F45B6E 100%); }
+
 .background {
   position: fixed;
   z-index: -100;
   width: 100%;
-  height: 100%;
-  background: linear-gradient(-240deg, #F45C67 1%, #F5845E 33%, #F6925B 50%, #F45B6E 100%); }
+  height: 100%; }
 
 .tile-wrap {
   position: absolute;
@@ -84,5 +86,27 @@ article {
 
 .nohover {
   opacity: 0.4; }
+
+.iphone {
+  display: none; }
+
+@media (max-width: 480px) {
+  .tile-wrap {
+    display: none; }
+
+  .iphone {
+    display: block; }
+
+  .iphone_tile {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    background: #F9FFFF;
+    border: 1px solid #F1F1F1;
+    text-align: center;
+    padding: 50px 0;
+    text-decoration: none;
+    color: #BEC2C3;
+    margin-top: 1em; } }
 
 /*# sourceMappingURL=main.css.map */
