--- a/main.scss
+++ b/main.scss
@@ -24,14 +24,16 @@ $tileHeight: 220px;
 /*=======================
   Styles
 =======================*/
+body {
+  background: linear-gradient(-240deg, #F45C67 1%, #F5845E 33%, #F6925B 50%, #F45B6E 100%);
 
+}
 // Background Styles
 .background {
   position: fixed;
   z-index: -100;
   width: 100%;
   height: 100%;
-  background: linear-gradient(-240deg, #F45C67 1%, #F5845E 33%, #F6925B 50%, #F45B6E 100%);
 }
 
 // Tile Styles
@@ -136,3 +138,22 @@ article {
 //       left: 50% !important;
 //       }
 //   }
+.iphone {display: none}
+@media (max-width: 480px) {
+
+.tile-wrap {display: none}
+.iphone {display: block}
+
+.iphone_tile {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  background: $white;
+  border: 1px solid $lightgray;
+  text-align: center;
+  padding: 50px 0;
+  text-decoration: none;
+  color: $gray;
+  margin-top: 1em;
+}
+}
