--- a/main.css
+++ b/main.css
@@ -95,18 +95,34 @@ article {
     display: none; }
 
   .iphone {
-    display: block; }
-
-  .iphone_tile {
-    width: 80%;
+    display: block;
+    position: relative;
+    height: 300px;
+    width: 300px;
     margin-left: auto;
     margin-right: auto;
     background: #F9FFFF;
     border: 1px solid #F1F1F1;
     text-align: center;
-    padding: 50px 0;
     text-decoration: none;
     color: #BEC2C3;
-    margin-top: 1em; } }
+    margin-top: 1em;
+    overflow: hidden; }
+
+  .iphone_tile {
+    padding: 40px;
+    width: 100%;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    -webkit-transition: -webkit-transform 2s, opacity 2s;
+    transition: transform 2s, opacity 2s;
+    position: absolute;
+    background: #F9FFFF; }
+
+  .front:hover {
+    -webkit-transform: rotatey(180deg);
+    transform: rotatey(180deg);
+    opacity: 0; } }
 
 /*# sourceMappingURL=main.css.map */
