--- a/main.scss
+++ b/main.scss
@@ -142,18 +142,43 @@ article {
 @media (max-width: 480px) {
 
 .tile-wrap {display: none}
-.iphone {display: block}
 
-.iphone_tile {
-  width: 80%;
+.iphone {
+  display: block;
+  position: relative;
+  height: 300px;
+  width: 300px;
   margin-left: auto;
   margin-right: auto;
   background: $white;
   border: 1px solid $lightgray;
   text-align: center;
-  padding: 50px 0;
   text-decoration: none;
   color: $gray;
   margin-top: 1em;
+  overflow: hidden;
 }
+
+.iphone_tile {
+  padding: 40px;
+  width: 100%;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-transition: -webkit-transform 2s, opacity 2s;
+  transition: transform 2s, opacity 2s;
+  position: absolute;
+  background: $white;
+}
+
+.front:hover {
+  -webkit-transform: rotatey(180deg);
+  transform: rotatey(180deg);
+  opacity: 0;
+}
+
+.back:hover {
+  background: red;
+}
+
 }
